--- a/index.html
+++ b/index.html
@@ -6,3 +6,7 @@
   <title>Мое первое резюме верстальщика</title>
   <link rel="stylesheet" href="style.css">
 </head>
+<body>
+  <h1>Тестовый заголовок</h1>
+</body>
+</html>
